--- a/package.json
+++ b/package.json
@@ -7,11 +7,13 @@
     "build": "vite build client/",
     "serve": "cross-env MODE=PRODUCTION nodemon server/server.js"
   },
+  "type": "module",
   "dependencies": {
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.4.0",
     "express": "^4.18.2",
+    "express-session": "^1.17.3",
     "dotenv": "^16.0.2",
     "cookie-parser": "^1.4.6",
     "pg": "^8.8.0",
@@ -19,7 +21,12 @@
     "cors": "^2.8.5",
     "vite": "^3.2.0",
     "@vitejs/plugin-react": "^2.1.0",
-    "vite-plugin-html": "^3.2.0"
+    "vite-plugin-html": "^3.2.0",
+    "pino": "^8.7.0",
+    "dayjs": "^1.11.6",
+    "jsonwebtoken": "^8.5.1",
+    "ioredis": "^5.2.3",
+    "connect-redis": "^6.1.3"
   },
   "devDependencies": {
     "eslint": "^8.26.0",
@@ -33,7 +40,7 @@
     "cross-env": "^7.0.3",
     "nodemon": "^2.0.20",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9"
+    "sass": "^1.54.9",
+    "pino-pretty": "^9.1.1"
   }
-
 }
