--- a/package.json
+++ b/package.json
@@ -9,26 +9,31 @@
   },
   "type": "module",
   "dependencies": {
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-router-dom": "^6.4.0",
+    "@reduxjs/toolkit": "^1.8.6",
+    "@vitejs/plugin-react": "^2.1.0",
+    "connect-redis": "^6.1.3",
+    "cookie-parser": "^1.4.6",
+    "cors": "^2.8.5",
+    "dayjs": "^1.11.6",
+    "dotenv": "^16.0.2",
     "express": "^4.18.2",
     "express-session": "^1.17.3",
-    "dotenv": "^16.0.2",
-    "cookie-parser": "^1.4.6",
-    "pg": "^8.8.0",
-    "path": "^0.12.7",
-    "cors": "^2.8.5",
-    "vite": "^3.2.0",
-    "@vitejs/plugin-react": "^2.1.0",
-    "vite-plugin-html": "^3.2.0",
-    "pino": "^8.7.0",
-    "dayjs": "^1.11.6",
-    "jsonwebtoken": "^8.5.1",
     "ioredis": "^5.2.3",
-    "connect-redis": "^6.1.3"
+    "jsonwebtoken": "^8.5.1",
+    "path": "^0.12.7",
+    "pg": "^8.8.0",
+    "pino": "^8.7.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-redux": "^8.0.4",
+    "react-router-dom": "^6.4.0",
+    "redux-devtools-extension": "^2.13.9",
+    "vite": "^3.2.0",
+    "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
+    "concurrently": "^7.5.0",
+    "cross-env": "^7.0.3",
     "eslint": "^8.26.0",
     "eslint-config-prettier": "^8.5.0",
     "eslint-plugin-import": "^2.26.0",
@@ -36,11 +41,9 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.30.1",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "concurrently": "^7.5.0",
-    "cross-env": "^7.0.3",
     "nodemon": "^2.0.20",
+    "pino-pretty": "^9.1.1",
     "prettier": "^2.7.1",
-    "sass": "^1.54.9",
-    "pino-pretty": "^9.1.1"
+    "sass": "^1.54.9"
   }
 }
