--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   },
   "type": "module",
   "dependencies": {
+    "@react-oauth/google": "^0.2.8",
     "@reduxjs/toolkit": "^1.8.6",
     "@vitejs/plugin-react": "^2.1.0",
     "connect-redis": "^6.1.3",
@@ -20,6 +21,7 @@
     "express-session": "^1.17.3",
     "ioredis": "^5.2.3",
     "jsonwebtoken": "^8.5.1",
+    "node-fetch": "^3.2.10",
     "path": "^0.12.7",
     "pg": "^8.8.0",
     "pino": "^8.7.0",
@@ -28,7 +30,7 @@
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
     "redux-devtools-extension": "^2.13.9",
-    "vite": "^3.2.0",
+    "vite": "^3.1.0",
     "vite-plugin-html": "^3.2.0"
   },
   "devDependencies": {
