--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "pg": "^8.8.0",
     "pino": "^8.7.0",
     "react": "^18.2.0",
+    "react-confetti": "^6.1.0",
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
