--- a/package.json
+++ b/package.json
@@ -30,6 +30,8 @@
     "react-dom": "^18.2.0",
     "react-redux": "^8.0.4",
     "react-router-dom": "^6.4.0",
+    "react-use": "^17.4.0",
+    "react-use-window-size": "^1.0.1",
     "redux-devtools-extension": "^2.13.9",
     "vite": "^3.1.0",
     "vite-plugin-html": "^3.2.0"
